# premiere-suites-ai-platform

./: .gitignore  Makefile  PROJECT_STRUCTURE.md  QDANT_SETUP_GUIDE.md  QDRANT_CLOUD_GUIDE.md  README.md  __init__.py  env.example  faq_scraper.py  main.py  map_faq_sections.py  premiere_scraper.py  premiere_suites_chunks.txt  premiere_suites_data.csv  premiere_suites_data.json  premiere_suites_data.jsonl  premiere_suites_data.md  premiere_suites_data.txt  premiere_suites_faq_data.json  premiere_suites_faq_data.jsonl  premiere_suites_faq_data.md  pyproject.toml  qdrant_setup.py  quick_start.py  requirements.txt  search_faqs.py  setup_faq_vectorization.py  test_n8n_integration.py  vectorize_faq_data.py
.github/workflows/: cd.yml  minimal.yml  render.yml  vercel.yml
ci-cd/: fly.toml
config/: docker-compose.yml
data/processed/: premiere_suites_chunks.txt  premiere_suites_data.csv  premiere_suites_data.json  premiere_suites_data.jsonl  premiere_suites_faq_chunks.txt  premiere_suites_faq_data.csv  premiere_suites_faq_data.json  premiere_suites_faq_data.jsonl  premiere_suites_faq_data.txt
data/raw/: premiere_suites_data.csv  premiere_suites_data.md  premiere_suites_data.txt
deploy/: deployment-steps.md
deploy/n8n/: .dockerignore  Dockerfile  README.md
docs/: DOCUMENTATION_INDEX.md  FAQ_DATA_COMPLETION_SUMMARY.md  FAQ_WORKFLOW_SUMMARY.md  N8N_WORKFLOW_TROUBLESHOOTING.md  PAGECONTENT_STANDARDIZATION_SUMMARY.md  PROJECT_LAYOUT_FIXES.md  PROJECT_REORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  PROPERTY_DATA_COMPLETION_SUMMARY.md  VECTORIZATION_PROPERTIES_GUIDE.md  qdrant_web_interface_guide.md
docs/guides/: CONCIERGE_WORKFLOW_GUIDE.md  FAQ_TO_QDRANT_WORKFLOW_GUIDE.md  FAQ_VECTORIZATION_GUIDE.md  IMPORT_WORKFLOW_TO_N8N.md  LANGCHAIN_QDRANT_GUIDE.md  MANUAL_WORKFLOW_CREATION.md  N8N_INTEGRATION_GUIDE.md  SUMMARY.md  VECTOR_DB_GUIDE.md
docs/workflows/: Complete Demo Bot - AM.json  Complete Demo Bot.json  Demo Bot.json  Populate Qdrant Vectors.json  Premier Suites Concierge v1 (Hardened).json  Premier Suites Concierge v1 (Hardened).json.fixed  Premier Suites Concierge v1 (Simplified).json  Premier Suites Concierge v1.json  Premier Suites Concierge with price qualification.json  faq_to_qdrant_basic.json  faq_to_qdrant_workflow.json  faq_to_qdrant_workflow_fixed.json  faq_to_qdrant_workflow_simple.json  n8n_booking_concierge_workflow.json  n8n_debug_workflow.json  n8n_openapi_workflow.json  n8n_simple_concierge_workflow.json  n8n_simple_fixed_workflow.json  n8n_simple_test_workflow.json  n8n_workflow_fixed.json  n8n_working_config.json  premiere-suites-demo-workflow.json  simple_test_workflow.json
examples/: faq_workflow_example.py  langchain_faq_example.py  langchain_qdrant_example.py
scripts/: check_and_fix_pagecontent.py  convert_faq_to_content.py  convert_jsonl_to_json.py  convert_text_chunks_to_pagecontent.py  fix_n8n_workflow.py  generate_responsive_hero_images.py  recreate_collections_langchain.py  recreate_collections_simple.py  recreate_collections_with_properties.py  setup.py  setup_qdrant_instructions.md  start_qdrant_local.py  update_file_references.py  vectorize_faq_data.py
src/: __init__.py
tests/: test_concierge_faq.py  test_langchain_integration.py  test_n8n_integration.py  test_n8n_simulation.py  test_scraper.py  test_search_filters.py  test_vectorization_properties.py
web/: premiere_suites_demo.html  simple_webhook_test.html  test_webhook.html
(+27 files in other folders)
